--- a/CityGuide/app/src/main/res/layout/activity_main.xml
+++ b/CityGuide/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,15 +19,14 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="38dp"
         android:entries="@array/lvGroup"
-        android:textSize="20sp"
-        app:drawableLeftCompat="@drawable/ic_launcher_foreground"
         tools:ignore="MissingConstraints">
 
 
     </ListView>
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
