--- a/VacationSelector/app/src/main/res/layout/activity_maldives.xml
+++ b/VacationSelector/app/src/main/res/layout/activity_maldives.xml
@@ -8,48 +8,56 @@
 
     <Button
         android:id="@+id/btBack3"
-        android:layout_width="205dp"
-        android:layout_height="49dp"
+        android:layout_width="289dp"
+        android:layout_height="78dp"
         android:text="@string/btBack"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.768" />
+        app:layout_constraintVertical_bias="0.819" />
 
     <TextView
         android:id="@+id/tvName"
-        android:layout_width="302dp"
-        android:layout_height="63dp"
+        android:layout_width="362dp"
+        android:layout_height="32dp"
         android:text="@string/tvMName"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.489"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.281" />
+        app:layout_constraintVertical_bias="0.32" />
 
     <TextView
         android:id="@+id/tvDestination5"
         android:layout_width="302dp"
         android:layout_height="63dp"
         android:text="@string/tvDestination"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.157" />
+        app:layout_constraintVertical_bias="0.241" />
 
     <TextView
         android:id="@+id/tvDescription5"
-        android:layout_width="361dp"
-        android:layout_height="156dp"
+        android:layout_width="393dp"
+        android:layout_height="268dp"
         android:text="@string/tvMDescription"
+        android:textColor="@color/black"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.341"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.442" />
+        app:layout_constraintVertical_bias="0.552" />
 </androidx.constraintlayout.widget.ConstraintLayout>
