--- a/VacationSelector/app/src/main/res/layout/activity_petra.xml
+++ b/VacationSelector/app/src/main/res/layout/activity_petra.xml
@@ -8,9 +8,10 @@
 
     <Button
         android:id="@+id/btBack2"
-        android:layout_width="205dp"
-        android:layout_height="49dp"
+        android:layout_width="322dp"
+        android:layout_height="69dp"
         android:text="@string/btBack"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,37 +20,45 @@
 
     <TextView
         android:id="@+id/tvName2"
-        android:layout_width="302dp"
-        android:layout_height="63dp"
+        android:layout_width="350dp"
+        android:layout_height="34dp"
         android:text="@string/tvPName"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.281" />
+        app:layout_constraintVertical_bias="0.337" />
 
     <TextView
         android:id="@+id/tvDestination6"
         android:layout_width="302dp"
         android:layout_height="63dp"
         android:text="@string/tvDestination"
+        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.157" />
+        app:layout_constraintVertical_bias="0.257" />
 
     <TextView
         android:id="@+id/tvDescription6"
-        android:layout_width="378dp"
-        android:layout_height="146dp"
+        android:layout_width="404dp"
+        android:layout_height="172dp"
         android:text="@string/tvPDescription"
+        android:textColor="@color/black"
+        android:textSize="16.75sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.341"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.442" />
+        app:layout_constraintVertical_bias="0.481" />
 </androidx.constraintlayout.widget.ConstraintLayout>
