--- a/VacationSelector/app/src/main/res/layout/activity_main.xml
+++ b/VacationSelector/app/src/main/res/layout/activity_main.xml
@@ -85,6 +85,7 @@
             android:id="@+id/rbHistory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:checked="true"
             android:minHeight="48dp"
             android:text="@string/rbHistory"
             android:textColor="@color/black"
@@ -105,5 +106,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.444" />
+
+<!--
+    <TextView
+        android:id="@+id/tvChoice"
+        android:layout_width="133dp"
+        android:layout_height="37dp"
+        android:text="choice"
+        android:textAlignment="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.943" />
+-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
