--- a/AlohaMusic/app/src/main/res/layout/activity_splash.xml
+++ b/AlohaMusic/app/src/main/res/layout/activity_splash.xml
@@ -14,7 +14,9 @@
         android:text="@string/tvSplash"
         android:textAlignment="center"
         android:textColor="@android:color/holo_orange_dark"
-        android:textSize="34sp"
+        android:textColorHighlight="@color/black"
+        android:textSize="60sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
